--- a/WhiteBears/Style/ProjectPage.css
+++ b/WhiteBears/Style/ProjectPage.css
@@ -197,7 +197,7 @@
     width: 150px;
 }
 
-#adminTeamManagement
+#TeamManagement
 {
    
     float:right; 
@@ -208,4 +208,6 @@
 {
     float: left;
 }
+
+
 
