Fix broken chartjs plugin reference

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -9,6 +9,7 @@
 @Styles.Render("~/bundles/style/dashboard")
 @Scripts.Render("~/bundles/scripts/chartjs")
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
+<script src="~/Scripts/chartjs-plugin-labels.js"></script>
 <script>
     function sortTable(n, isTaskTable) {
         var table, rows, switching, i, first, second, shouldSwitch, direction, switchcount = 0;
