Change default values of tasks completed labels

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -170,8 +170,8 @@
             <div class="progress">
                 <div id="taskProgressBar" class="progress-bar progress-bar-success" role="progressbar" style="width:80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
             </div>
-            <text id="taskProgressStatus" class="text-large">k</text><br />
-            <text id="taskProgressRemaining" class="text-medium text-secondary">3 tasks remaining</text>
+            <text id="taskProgressStatus" class="text-large">0/0</text><br />
+            <text id="taskProgressRemaining" class="text-medium text-secondary">0 tasks remaining</text>
         </div>
 
         <div class="ProgressBarContainer">
