Admin page: project settings back-end merged w/ front-end

--- a/WhiteBears/Views/AdminPage/TaskTable.cshtml
+++ b/WhiteBears/Views/AdminPage/TaskTable.cshtml
@@ -19,6 +19,7 @@
     <tbody>
 
         @foreach (var task in Model) {
+            if (task == null) { break; }
             <tr>
                 <td>@task.TaskId</td>
                 <td>@task.Title</td>
