Update donut borders

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -468,16 +468,16 @@
                                 label: "Task Overview",
                                 data: dataArr,
                                 backgroundColor: [
-                                    "#008b00",
-                                    "#ffb732",
-                                    "#1a1aff",
-                                    "#cd0000",
+                                    "#6fff47",
+                                    "#ffe047",
+                                    "#4778ff",
+                                    "#ff4747",
                                 ],
                                 borderColor: [
-                                    "#008b55",
-                                    "#ffb788",
-                                    "#1a1fff",
-                                    "#cd0088",
+                                    "#2ac200",
+                                    "#c2a200",
+                                    "#0034c2",
+                                    "#c20000",
                                 ],
                                 borderWidth: [1, 1, 1, 1]
                             }
