Updated the borders

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -477,10 +477,10 @@
                                     "#FF9E9E",
                                 ],
                                 borderColor: [
-                                    "#00FF15",
-                                    "#FFB300",
-                                    "#0000FF",
-                                    "#c20000",
+                                    "#9EFFA6",
+                                    "#FFE29E",
+                                    "#9E9EFF",
+                                    "#FF9E9E",
                                 ],
                                 borderWidth: [2, 2, 2,2]
                             }
