--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -67,11 +67,16 @@
             @if (Model.CurrentUser.Role.Equals("Project Manager")) {
                 <button class="ProjectButtons btn-secondary" onclick="location.href='@Url.Action("Index", "AddProject")'">Add project</button>
             }
+            <br /><br />
             <div id="ProjectList">
                 <label>Projects</label> <br />
-                @foreach (var project in Model.Projects) {
-                    <button class="ProjectButtons btn-secondary" onclick="location.href='@Url.Action("Index", "Project", new { id = project.ProjectId})'">@project.Title</button>;
-                }
+                <table class="table table-hover pointer" style="width: 100%">
+                    @foreach (var project in Model.Projects) {
+                        <tr style="width: 100%">
+                            <td onclick="location.href='@Url.Action("Index", "Project", new { id = project.ProjectId})'">@project.Title</td>
+                        </tr>
+                    }
+                </table>
             </div>
         </div>
     </nav>
@@ -101,7 +106,7 @@
     <div id="TasksSection">
         <label>Tasks</label>
         <div class="scrollable-task">
-            <table id="tasktable" class="table table-hover">
+            <table id="tasktable" class="table table-hover ">
                 <tr>
                     <th scope="col" onclick="sortTable(0, true)">Task</th>
                     <th scope="col" onclick="sortTable(1, true)">Priority</th>
@@ -135,7 +140,7 @@
         <div>
             <label>Personal Notes</label>
             <div class="scrollable-notes" id="PersonalNotesTable">
-                <table id="notestable" class="table table-hover">
+                <table id="notestable" class="table table-hover pointer">
                     <tr>
                         <th onclick="sortTable(0, false)">Date</th>
                         <th onclick="sortTable(1, false)">Note</th>
