Remove horizontal sidebars on personal notes

--- a/WhiteBears/Style/dashboard.css
+++ b/WhiteBears/Style/dashboard.css
@@ -164,7 +164,8 @@ header {
 .scrollable-notes {
     height: auto;
     max-height: 400px;
-    overflow: scroll;
+    overflow: hidden;
+    overflow-y: scroll
 }
 
 #TaskOverviewSection {
