--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -111,7 +111,7 @@
                     <th scope="col" onclick="sortTable(4, true)">Project</th>
 
                     @if (Model.CurrentUser.Role == "Project Manager") {
-                        <th scope="col" onclick="sortTable(5, true)">Assigned To</th>
+                        <th scope="col" onclick="sortTable(5, true)">Assignee</th>
                     }
                 </tr>
                 <tbody id="taskTableBody">
