Change layout file and dashboard page margin issues

--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -47,7 +47,7 @@
         }
     }
 </script>
-<div id="MainPage">
+
     <nav id="LeftPanel">
         <div class="LeftPanelBorder" id="UserInfoContainer">
             <div id="UserInfo">
@@ -83,7 +83,7 @@
 
 
     <header>
-        <div id="headings">
+        <div id="headings" class="header-text">
             <h2>Personal Dashboard</h2>
             <h3>Here's an overview of your projects</h3>
         </div>
@@ -198,7 +198,7 @@
             <text class="text-medium text-secondary">900GB remaining</text>
         </div>
     </div>
-</div>
+
 <script>
 
     $(document).ready(function () {
