--- a/WhiteBears/Views/Shared/_Layout.cshtml
+++ b/WhiteBears/Views/Shared/_Layout.cshtml
@@ -10,10 +10,10 @@
     @Scripts.Render("~/bundles/scripts/popper")
     @Scripts.Render("~/bundles/scripts/bootstrap")
     @Styles.Render("~/bundles/style/bootstrap")
-    @Styles.Render("~/bundles/style/styling")
+    @Styles.Render("~/bundles/style/layout")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 500px">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,9 +21,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
                 @Html.ActionLink("WhiteBears", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse" >
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Business", "About", "Home")</li>
@@ -38,8 +39,8 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
+    </div >
+    <div class="container body-content" style="margin: 0px; padding: 0px">
         @RenderBody()
 
 
