--- a/WhiteBears/Style/dashboard.css
+++ b/WhiteBears/Style/dashboard.css
@@ -42,8 +42,7 @@ table {
     margin-left: 50px;
     margin-top: 20px;
     min-height: 300px;
-    min-width: 700px;
-    max-width: 700px;
+    width: 65%;
     margin-bottom: 15px;
 }
 
@@ -80,7 +79,7 @@ table {
 
 header {
     text-align: center;
-    margin-left: 250px;
+    margin-left: 50px;
 }
 
 .headerButtons:hover {
@@ -105,23 +104,28 @@ header {
 }
 
 #PersonalNotesSection {
-    margin-top: 30px;
+    margin-top: 20px;
     float: right;
+    margin-right: 20px;
 }
 
     #PersonalNotesSection td, th {
         border: 1px solid darkgrey;
         padding: 10px;
-        max-width: 300px;
+        max-width: 800px;
     }
 
 #PersonalNotesButtonsContainer {
     margin-top: 10px;
-    margin-left: 100px;
-    min-width: 300px;
+    width: 100%;
     text-align: center;
 }
 
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 #Note {
     width: 300px;
@@ -136,15 +140,20 @@ header {
     text-align: left;
 }
 
-.ProgressBarContainer {
+.ProgressBarContainer:last-of-type {
     margin-top: 30px;
-    margin-left: 250px;
-    width: 400px;
+}
+
+.ProgressBarContainer {
+    margin-left: 50px;
+    width: 600px;
+    float: left;
 }
 
 .ProgressBarContainers {
-    margin-top: 30px;
+    margin-top: 20px;
     width: 300px;
+    float:left;
 }
 
 .text-large {
@@ -180,7 +189,7 @@ header {
 
 .scrollable-notes {
     height: auto;
-    max-height: 400px;
+    max-height: 250px;
     overflow: hidden;
     overflow-y: scroll
 }
@@ -189,9 +198,9 @@ header {
     text-align: center;
     float: right;
     height: 100px;
-    width: 100px;
+    width: 30%;
     margin-top: 20px;
-    margin-right: 75px;
+    margin-right: 20px;
 }
 
 #pie-chartcanvas {
