--- a/WhiteBears/Views/Shared/_Layout.cshtml
+++ b/WhiteBears/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div >
-    <div class="container body-content" style="margin: 0px; padding: 0px">
+    <div class="container body-content" style="width: 100%; margin: 0px; padding: 0px">
         @RenderBody()
 
 
